# Haber

./: .gitignore  README.md  docker-compose.yml  init.sh  main.py
Backend/: .env.example  Dockerfile  alembic.env.example.py  alembic.example.ini  entrypoint.sh  main.py  pyproject.toml
Backend/Application/UseCases/: documentUseCases.py  taskUseCases.py  (+1 more)
Backend/Shared/: database.py
Backend/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: Dockerfile  main.py  pyproject.toml
src/Application/UseCases/: documentUseCases.py  taskUseCases.py  transactionUseCases.py
src/Infrastructure/DB/repo_implement/: task_repo_impl.py  transaction_repo_impl.py
src/Shared/: database_both.py  database_one.py
src/alembic/: env.py
src/alembic/versions/: c5201efaece5_tables_initialized.py
src/backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/presentation/: main.py
src/presentation/API/routes/: document_routes.py  task_routes.py  transaction_routes.py
src/presentation/CLI/: main.py
src/presentation/CLI/commands/: document_commands.py  task_commands.py  transaction_commands.py
src/presentation/frontend/: package-lock.json  package.json
src/presentation/frontend/src/: App.tsx  index.css
src/presentation/frontend/src/components/: header.tsx
src/presentation/frontend/src/components/financial-universe/: financialstory_section.tsx  types.ts  universe-data.ts
src/presentation/frontend/src/pages/: Home.tsx
src/presentation/pydantic_models/: document_pydantic.py  task_pydanic.py
(+26 files in other folders)
